--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@ loom_version=1.11-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=net.legendzary.ppbmod
-archives_base_name=ppbmod
+maven_group=net.legendzary.ppbadditions
+archives_base_name=ppbadditions
 
 # Dependencies
 fabric_version=0.116.5+1.21.1
